# github-manager

./: pyproject.toml
github_manager/: TESTING.ipynb  github-manager.db-shm  github-manager.db-wal  main.py  repos.json
