[tool.poetry]
name = "github-manager"
version = "0.1.0"
description = ""
authors = ["Chris Birch <datapointchris@gmail.com>"]
readme = "README.md"
packages = [{include = "github_manager"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
ipywidgets = "^8.0.4"
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
tools = {git = "https://github.com/datapointchris/tools.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
